# survive-on-the-titanic

./: .gitignore  README.md  app.py  pyproject.toml  shared.py  train.py
