[tool.poetry]
name = "survive-on-the-titanic"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.3.1"
pandas = "2.0.3"
gradio = "^3.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
